Fixed alignment of awards

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -101,6 +101,7 @@
 /* awards styling */
 .columns.awards > div {
   row-gap: 30px;
+  align-items: flex-start;
 }
 
 .columns.awards > div > div {
